<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView_user_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_user_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_size"
                    android:layout_marginTop="@dimen/normal_size"
                    android:layout_marginEnd="@dimen/medium_size"
                    android:text="@string/info_user_title"
                    android:textSize="@dimen/text_size_huge"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_last_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_size"
                    android:layout_marginEnd="@dimen/normal_size"
                    android:padding="@dimen/padding_small"
                    android:paddingStart="@dimen/medium_size"
                    android:paddingEnd="@dimen/medium_size"
                    android:text="@string/info_user_subtitle"
                    android:textColor="@color/soft_grey"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView_last_name"
                    app:layout_constraintTop_toBottomOf="@+id/textView_title" />

                <ImageView
                    android:id="@+id/imageView_rfc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_person"
                    app:layout_constraintBottom_toBottomOf="@+id/editText_rfc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_rfc"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView_rfc"
                    style="@style/TextView_Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rfc_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_rfc"
                    app:layout_constraintTop_toBottomOf="@+id/textView_subtitle" />

                <EditText
                    android:id="@+id/editText_rfc"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_rfc"
                    app:layout_constraintTop_toBottomOf="@+id/textView_rfc"
                    tools:text="SFSDFGSG43VCDV" />

                <View
                    android:id="@+id/view_rfc"
                    style="@style/View_Separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_rfc" />

                <ImageView
                    android:id="@+id/imageView_user_age"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/calendar_icon"
                    app:layout_constraintBottom_toBottomOf="@+id/view_user_age"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_user_age"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView_user_age"
                    style="@style/TextView_Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_user_age"
                    app:layout_constraintTop_toBottomOf="@+id/view_rfc" />

                <EditText
                    android:id="@+id/editText_user_age"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_user_age"
                    app:layout_constraintTop_toBottomOf="@+id/textView_user_age"
                    tools:text="23" />

                <View
                    android:id="@+id/view_user_age"
                    style="@style/View_Separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_user_age" />

                <ImageView
                    android:id="@+id/imageView_zip_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="@+id/editText_zip_code"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_zip_code"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView_zip_code"
                    style="@style/TextView_Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zip_code_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_zip_code"
                    app:layout_constraintTop_toBottomOf="@+id/view_user_age" />


                <EditText
                    android:id="@+id/editText_zip_code"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_zip_code"
                    app:layout_constraintTop_toBottomOf="@+id/textView_zip_code"
                    tools:text="XXXXX" />


                <View
                    android:id="@+id/view_separator_zip_code"
                    style="@style/View_Separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_zip_code" />

                <TextView
                    android:id="@+id/textView_zodiac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_size"
                    app:layout_constraintStart_toStartOf="@+id/imageView_zip_code"
                    app:layout_constraintTop_toBottomOf="@id/view_separator_zip_code"
                    tools:text="@string/zodiac_text" />

                <TextView
                    android:id="@+id/textView_chinese_zodiac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_size"
                    app:layout_constraintStart_toStartOf="@+id/imageView_zip_code"
                    app:layout_constraintTop_toBottomOf="@id/textView_zodiac"
                    tools:text="@string/chinese_zodiac" />

                <TextView
                    android:id="@+id/textView_favorite_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/big_size"
                    app:layout_constraintStart_toStartOf="@+id/imageView_zip_code"
                    app:layout_constraintTop_toBottomOf="@id/textView_chinese_zodiac"
                    tools:text="@string/favorite_sport" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>