<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView_user_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/button_next"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_user_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textView_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_size"
                    android:layout_marginTop="@dimen/normal_size"
                    android:layout_marginEnd="@dimen/medium_size"
                    android:text="@string/data_user_title"
                    android:textSize="@dimen/text_size_huge"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_name"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_size"
                    android:layout_marginEnd="@dimen/normal_size"
                    android:padding="@dimen/padding_small"
                    android:paddingStart="@dimen/medium_size"
                    android:paddingEnd="@dimen/medium_size"
                    android:paddingBottom="70dp"
                    android:text="@string/data_user_subtitle"
                    android:textColor="@color/soft_grey"
                    android:textSize="@dimen/text_size_small"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView_name"
                    app:layout_constraintTop_toBottomOf="@+id/textView_title" />

                <TextView
                    android:id="@+id/textView_name"
                    style="@style/TextView_Regular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_name"
                    app:layout_constraintTop_toBottomOf="@id/textView_subtitle" />

                <EditText
                    android:id="@+id/editText_name"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView_name"
                    app:layout_constraintTop_toBottomOf="@+id/textView_name"
                    tools:text="Dulce Coral" />

                <ImageView
                    android:id="@+id/imageView_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_user_name"
                    app:layout_constraintBottom_toBottomOf="@+id/editText_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/textView_name"
                    tools:ignore="ContentDescription" />

                <View
                    android:id="@+id/view_name"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/normal_size"
                    android:layout_marginTop="@dimen/medium_size"
                    android:layout_marginEnd="@dimen/normal_size"
                    android:background="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editText_name" />

                <ImageView
                    android:id="@+id/imageView_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_person"
                    app:layout_constraintBottom_toBottomOf="@+id/editText_last_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_last_name"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView_last_name"
                    style="@style/TextView_Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_last_name"
                    app:layout_constraintTop_toBottomOf="@+id/view_name" />

                <EditText
                    android:id="@+id/editText_last_name"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_last_name"
                    app:layout_constraintTop_toBottomOf="@+id/textView_last_name"
                    tools:text="Rodriguez" />

                <View
                    android:id="@+id/view_last_name"
                    style="@style/View_Separator"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_last_name" />

                <ImageView
                    android:id="@+id/imageView_mother_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_person"
                    app:layout_constraintBottom_toBottomOf="@+id/editText_mother_last_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_mother_last_name"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView_mother_last_name"
                    style="@style/TextView_Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mother_last_name_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_mother_last_name"
                    app:layout_constraintTop_toBottomOf="@+id/view_last_name" />

                <EditText
                    android:id="@+id/editText_mother_last_name"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_mother_last_name"
                    app:layout_constraintTop_toBottomOf="@+id/textView_mother_last_name"
                    tools:text="Garcia" />

                <View
                    android:id="@+id/view_mother_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/View_Separator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_mother_last_name" />

                <ImageView
                    android:id="@+id/imageView_zip_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="@+id/editText_zip_code"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView_zip_code"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView_zip_code"
                    style="@style/TextView_Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zip_code_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_zip_code"
                    app:layout_constraintTop_toBottomOf="@+id/view_mother_last_name" />


                <EditText
                    android:id="@+id/editText_zip_code"
                    style="@style/EditTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_zip_code"
                    app:layout_constraintTop_toBottomOf="@+id/textView_zip_code"
                    tools:text="XXXXX" />


                <View
                    android:id="@+id/view_separator_zip_code"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/View_Separator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editText_zip_code" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_birth_date"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_text_picker"
                    android:layout_marginStart="@dimen/normal_size"
                    android:layout_marginTop="@dimen/normal_size"
                    android:layout_marginEnd="@dimen/normal_size"
                    android:hint="@string/text_date_of_birth"
                    android:theme="@style/TextInputLayout_Light"
                    app:endIconDrawable="@drawable/arrow_right"
                    app:endIconMode="custom"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_separator_zip_code"
                    app:startIconDrawable="@drawable/calendar_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_birth_date"
                        style="@style/TextView_Regular"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="false"
                        android:gravity="bottom"
                        android:inputType="date"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/view_divider_birth"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    style="@style/View_Separator"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout_birth_date" />

                <TextView
                    android:id="@+id/textView_sports"
                    style="@style/TextView_Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_sport_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView_zip_code"
                    app:layout_constraintTop_toBottomOf="@+id/view_divider_birth" />

                <com.unam.userinformation.views.DropDownWithHintView
                    android:id="@+id/dropDown_sport_type"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/form_item_size"
                    android:layout_marginStart="@dimen/normal_size"
                    android:layout_marginEnd="@dimen/normal_size"
                    android:layout_marginBottom="@dimen/big_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView_sports" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_size"
            android:background="@color/unam_gold"
            android:text="@string/continue_button_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>